fix(cu): pass JDK17 --add-opens flags to CU pod JVM (Arrow on Java 17)
The cu-manager launched CU pods with JAVA_OPTS="-Xmx<size>" only. After apache's
Java 17 LTS bump (#4938), Apache Arrow's MemoryUtil fails to initialize on JDK 17
without `--add-opens=java.base/java.nio=ALL-UNNAMED`, crashing the CU JVM on the
first Arrow operator (e.g. ArrowSource). The crash tears down the execution, which
surfaces downstream as "No storage is found for the given URI" during output-port
storage setup. Workflows without Arrow operators were unaffected.

Add the full JDK17 module-access flag set (mirroring .jvmopts; also covers
Pekko/Kryo) to the CU pods' JAVA_OPTS in both the k8s and AWS launch paths.
The sbt-native-packager launcher expands JAVA_OPTS as JVM args before the main
class, so --add-opens is applied correctly.

Verified on EKS: a CU launched after this fix initializes Arrow cleanly
(BaseAllocator/DefaultAllocationManager) and runs the workflow through the
Iceberg/Lakekeeper-on-S3 storage path without the MemoryUtil crash.

Co-Authored-By: Claude Opus 4.8 (1M context) <noreply@anthropic.com>